--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,8 +5,10 @@
     { "path": "./tsconfig.node.json" }
   ],
   "compilerOptions": {
-      "baseUrl": ".",
-      "paths": {"@/*": ["./src/*"]}
+    "baseUrl": ".",  
+    "paths": {
+      "@/*": ["src/*"],           
+      "@lib/*": ["src/lib/*"] 
     }
   }
-
+}
